# Copyright (C) 2021 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# GNU Lesser General Public License v2.1 or any later version.

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "wheel",
    "setuptools>=45",
    "setuptools_scm[toml]>=6.0",
    "cmake-build-extension",
    "idyntree>=3.1",
]

[tool.setuptools_scm]
root = "../"
local_scheme = "dirty-tag"
