# Copyright (C) 2021 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# GNU Lesser General Public License v2.1 or any later version.

[metadata]
name = scenario
description = SCENe interfAces for Robot Input/Output.
long_description = file: README.md
long_description_content_type = text/markdown
author = Diego Ferigo
author_email = dgferigo@gmail.com
license = LGPL
platforms = any
url = https://github.com/robotology/gym-ignition/tree/master/scenario

project_urls =
    Changelog = https://github.com/robotology/gym-ignition/releases
    Tracker = https://github.com/robotology/gym-ignition/issues
    Documentation = https://robotology.github.io/gym-ignition
    Source = https://github.com/robotology/gym-ignition/tree/master/scenario

keywords =
    robotics
    gazebo
    ignition
    simulation
    physics
    multibody
    dynamics
    physics simulation
    middleware
    real-time

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Topic :: Games/Entertainment :: Simulation
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development
    Framework :: Robot Framework
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: C++
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)

[options]
zip_safe = False
python_requires = >=3.8
install_requires =
    packaging
